git-annex (10.20250606) UNRELEASED; urgency=medium

  * Skip and warn when a tree import includes empty filenames,
    which can happen with eg a S3 bucket.
  * Avoid a problem with temp file names ending in whitespace on
    filesystems like VFAT that don't support such filenames.

 -- Joey Hess <id@joeyh.name>  Mon, 23 Jun 2025 11:11:29 -0400

git-annex (10.20250605) upstream; urgency=medium

  * sync: Push the current branch first, rather than a synced branch,
    to better support git forges (gitlab, gitea, forgejo, etc.) which
    use push-to-create with the first pushed branch becoming the default
    branch.
  * Added annex.fastcopy and remote.name.annex-fastcopy config setting.
    When set, this allows the copy_file_range syscall to be used, which
    can eg allow for server-side copies on NFS. (For fastest copying, 
    also disable annex.verify or remote.name.annex-verify.)
  * map: Support --json option.
  * map: Improve display of remote names.
  * When annex.freezecontent-command or annex.thawcontent-command is
    configured but fails, prevent initialization. This allows the user to
    fix their configuration and avoid crippled filesystem detection
    entering an adjusted branch.
  * assistant: Avoid hanging at startup when a process has a *.lock file
    open in the .git directory.
  * Windows: Fix duplicate file bug that could occur when files were
    supposed to be moved across devices.

 -- Joey Hess <id@joeyh.name>  Thu, 05 Jun 2025 14:10:36 -0400

git-annex (10.20250520) upstream; urgency=medium

  * Preferred content now supports "balanced=groupname:lackingcopies"
    to make files be evenly balanced amoung as many repositories as are
    needed to satisfy numcopies.
  * map: Fix buggy handling of remotes that are bare git repositories
    accessed via ssh.
  * map: Avoid looping forever with mutually recursive paths between
    repositories accessed via ssh.
  * whereused: Fix bug that could find matches from grafts 