@@ -8,11 +8,11 @@
     $if sshrepo
       <p>
         If this repository's ssh server has git-annex installed, you can #
-        upgrade this repository to a full git annex, which will store the
+        convert this repository to a full git annex, which will store the
         contents of your files, not only their metadata.
       <p>
-        <a .btn .btn-default href="@{UpgradeRepositoryR r}">
-          Upgrade Repository
+        <a .btn .btn-default href="@{ConvertRepositoryR r}">
+          Convert Repository
     <h2>
       Repository information
     <p>
